<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.0</version>
    <relativePath/>
  </parent>

  <groupId>de.zorro909.skywright</groupId>
  <artifactId>skywright-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Skywright reactor</name>
  <description>Aggregator and shared build parent for Skywright project parts.</description>

  <modules>
    <module>api/skywright-api</module>
    <module>frontend</module>
    <module>graalpy-environment</module>
    <module>backend</module>
    <module>backend-deployment</module>
    <module>sdk</module>
  </modules>

  <properties>
    <archunit.version>1.5.0</archunit.version>
    <backend.container.image>skywright-backend:${project.version}</backend.container.image>
    <docker-maven.version>0.49.0</docker-maven.version>
    <exec-maven.version>3.6.3</exec-maven.version>
    <graalpy.version>25.2.4</graalpy.version>
    <graalpy.external.directory>${maven.multiModuleProjectDirectory}/.graalpy/resources</graalpy.external.directory>
    <java.version>25</java.version>
    <jacoco.version>0.8.15</jacoco.version>
    <maven-antrun.version>3.2.0</maven-antrun.version>
    <networknt-json-schema.version>3.0.6</networknt-json-schema.version>
    <openapi-generator.version>7.24.0</openapi-generator.version>
    <properties-maven.version>1.3.0</properties-maven.version>
    <postgresql.version>42.7.12</postgresql.version>
    <postgresql.container.image>postgres:18.1-bookworm@sha256:cc9f4143a8d2fa8cf3749d0cb4d26ecf2d53a77a2ac807e9ebd67ae22426221a</postgresql.container.image>
    <spring-javaformat.version>0.0.48</spring-javaformat.version>
    <skypilot.version>0.13.0</skypilot.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>prepare-unit-coverage</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report-unit-coverage</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>${maven-antrun.version}</version>
        <executions>
          <execution>
            <id>capture-source-revision</id>
            <phase>initialize</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <mkdir dir="${project.build.directory}"/>
                <exec executable="git" dir="${maven.multiModuleProjectDirectory}" failonerror="true"
                      output="${project.build.directory}/source-revision.properties">
                  <arg value="log"/>
                  <arg value="-1"/>
                  <arg value="--format=git.commit.id.full=%H"/>
                </exec>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>${properties-maven.version}</version>
        <executions>
          <execution>
            <id>load-source-revision</id>
            <phase>initialize</phase>
            <goals>
              <goal>read-project-properties</goal>
            </goals>
            <configuration>
              <files>
                <file>${project.build.directory}/source-revision.properties</file>
              </files>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.spring.javaformat</groupId>
        <artifactId>spring-javaformat-maven-plugin</artifactId>
        <version>${spring-javaformat.version}</version>
        <executions>
          <execution>
            <id>validate-java-format</id>
            <phase>validate</phase>
            <inherited>true</inherited>
            <goals>
              <goal>validate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-toolchains-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>select-supported-jdk</id>
            <goals>
              <goal>select-jdk-toolchain</goal>
            </goals>
            <configuration>
              <version>[25.0.4]</version>
              <vendor>GraalVM Community</vendor>
              <useJdk>Never</useJdk>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-supported-build-runtime</id>
            <phase>validate</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>[3.9.16]</version>
                  <message>Build Skywright with Maven 3.9.16; scripts/setup-worktree installs it and the checked-in wrapper remains available.</message>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>[25.0.4]</version>
                  <message>Build Skywright with Java 25.0.4 from GraalVM Community 25.2.4.</message>
                </requireJavaVersion>
                <requireJavaVendor>
                  <includes>
                    <include>GraalVM Community</include>
                  </includes>
                  <message>Build Skywright with Java 25.0.4 from GraalVM Community 25.2.4.</message>
                </requireJavaVendor>
                <requireProperty>
                  <property>java.runtime.version</property>
                  <regex>25\.0\.4\+7-jvmci-25\.2-b20</regex>
                  <message>Build Skywright with the OpenJDK 25.0.4+7 runtime from GraalVM Community 25.2.4.</message>
                </requireProperty>
                <requireProperty>
                  <property>java.vendor.version</property>
                  <regex>GraalVM CE 25\.2\.4\+7\.1</regex>
                  <message>Build Skywright with GraalVM Community 25.2.4+7.1.</message>
                </requireProperty>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
